# podcast-llm

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run_tests.sh  test.txt  test2.text
.github/workflows/: docs.yml  publish.yml  pytest.yml
docs/: Makefile
docs/source/: conf.py  configuration.rst  index.rst  installation.rst  license.rst  usage.rst
docs/source/modules/: config.rst  extractors_audio.rst  extractors_base.rst  extractors_pdf.rst  extractors_plaintext.rst  extractors_utils.rst  extractors_web.rst  extractors_youtube.rst  generate.rst  gui.rst  models.rst  outline.rst  research.rst  text_to_speech.rst  utils_checkpointer.rst  utils_embeddings.rst  utils_llm.rst  utils_rate_limits.rst  utils_text.rst
output/: test.txt
podcast_llm/: generate.py  gui.py  models.py  outline.py  research.py  text_to_speech.py  writer.py
podcast_llm/config/: __init__.py  config.py  config.yaml  logging_config.py
podcast_llm/extractors/: __init__.py  audio.py  base.py  pdf.py  plaintext.py  utils.py  web.py  word.py  youtube.py
podcast_llm/utils/: checkpointer.py  embeddings.py  llm.py  rate_limits.py  text.py
tests/: conftest.py  test_extractors_pdf.py  test_extractors_plaintext.py  test_extractors_utils.py  test_extractors_word.py  test_extractors_youtube.py  test_generate.py  test_outline.py  test_text_to_speech.py  test_utils_embeddings.py  test_utils_llm.py  test_utils_text.py
tests/test_data/: .gitkeep
